--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "cheerio": "latest",
     "request": "latest",
-    "sqlite3": "latest"
+    "sqlite3": "latest",
     "tress": "latest"
   },
   "keywords": [
